[package]
authors = ["Dock.io"]
edition = "2021"
name = "dock-runtime"
version = "0.25.0"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
ethabi = { git = "https://github.com/snowfork/ethabi-decode.git", package = "ethabi-decode", branch = "master", default-features = false }
parity-bytes = { version = "0.1.2", default-features = false }
ethbloom = { version = "0.12.1", default-features = false }
ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.13.1", default-features = false, features = ["codec", "rlp", "serialize"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["rlp", "byteorder"] }

evm = { git = "https://github.com/rust-blockchain/evm", rev = "51b8c2ce3104265e1fd5bb0fe5cdfd2e0938239c", default-features = false, features = ["with-codec"] }
evm-runtime = { version = "0.35", default-features = false, git = "https://github.com/rust-blockchain/evm.git", rev = "51b8c2ce3104265e1fd5bb0fe5cdfd2e0938239c" }
evm-gasometer = { version = "0.35", default-features = false, git = "https://github.com/rust-blockchain/evm.git", rev = "51b8c2ce3104265e1fd5bb0fe5cdfd2e0938239c" }

parity-util-mem = { version = "0.11", optional = true }

rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }
log = { version = "0.4", default-features = false }

static_assertions = "1.1.0"
pallet-base-fee = { git = "https://github.com/docknetwork/frontier.git", branch = "master", default_features = false }
smallvec = "1.4.1"
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4", default-features = false }

[dependencies.utils]
git = "https://github.com/docknetwork/dock-substrate-common.git"
branch = "approve-candidacy"
default-features = false

[dependencies.pallet-babe]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-beefy]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.beefy-primitives]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.beefy-merkle-tree]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.balances]
default-features = false
package = "pallet-balances"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-beefy-mmr]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.1.5"

[dependencies.frame-executive]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.grandpa]
default-features = false
package = "pallet-grandpa"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.119"

[dependencies.serde-big-array]
optional = true
version = "0.3.0"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-consensus-babe]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.fp-consensus]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-trie]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-election-provider-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-transaction-storage-proof]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-consensus-slots]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-consensus-vrf]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-authority-discovery]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-authorship]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-staking]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-application-crypto]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.timestamp]
default-features = false
package = "pallet-timestamp"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.transaction-payment]
default-features = false
package = "pallet-transaction-payment"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[build-dependencies.substrate-wasm-builder]
package = "substrate-wasm-builder"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-session]
default_features = false
features = ["historical"]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-sudo]
default_features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-authorship]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-utility]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-benchmarking]
optional = true
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-system-benchmarking]
optional = true
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-collective]
default-features = false
git = "https://github.com/docknetwork/dock-substrate-common.git"
branch = "approve-candidacy"

[dependencies.pallet-membership]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-scheduler]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-authority-discovery]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-im-online]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-identity]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-tasks]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-offences]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-staking]
default-features = false
git = "https://github.com/docknetwork/dock-substrate-common.git"
branch = "approve-candidacy"

[dependencies.pallet-staking-reward-curve]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-election-provider-multi-phase]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-treasury]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-bounties]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-tips]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-mmr]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-democracy]
default-features = false
git = "https://github.com/docknetwork/dock-substrate-common.git"
branch = "approve-candidacy"

[dependencies.pallet-elections-phragmen]
default-features = false
git = "https://github.com/docknetwork/dock-substrate-common.git"
branch = "approve-candidacy"

[dependencies.hex-literal]
version = "0.3.4"
default-features = false

[dependencies.pallet-evm]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/frame/evm"

[dependencies.pallet-ethereum]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/frame/ethereum"

[dependencies.pallet-evm-precompile-storage-reader]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../../../../frontier/frame/evm/precompile/storage-reader"

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/frame/evm/precompile/simple"

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/frame/evm/precompile/sha3fips"

[dependencies.pallet-evm-precompile-ed25519]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/frame/evm/precompile/ed25519"

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/frame/evm/precompile/modexp"

[dependencies.pallet-evm-precompile-bn128]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/frame/evm/precompile/bn128"

[dependencies.pallet-evm-precompile-dispatch]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/frame/evm/precompile/dispatch"

[dependencies.fp-rpc]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/primitives/rpc"

[dependencies.fp-storage]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/primitives/storage"

[dependencies.dock-poa]
default-features = false
path = "../pallets/poa"

[dependencies.dock-token-migration]
default-features = false
path = "../pallets/token-migration"

[dependencies.dock-core]
default-features = false
path = "../pallets/core"

[dependencies.dock-price-feed]
default-features = false
git = "https://github.com/docknetwork/dock-substrate-common.git"
branch = "approve-candidacy"

[dependencies.libsecp256k1]
version = "0.7"
default-features = false
features = []

[dependencies.dock-staking-rewards]
default-features = false
path = "../pallets/staking-rewards"

[dependencies.sp-npos-elections]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-state-machine]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-finality-grandpa]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.fp-self-contained]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
# path = "../frontier/primitives/self-contained"

[dependencies.sp-runtime-interface]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.fp-evm]
git = "https://github.com/docknetwork/frontier.git"
branch = "master"
default-features = false
# path = "../frontier/primitives/evm"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-mmr-primitives]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[features]
default = ["std"]
std = [
    "pallet-babe/std",
    "balances/std",
    "utils/std",
    "sp-consensus-vrf/std",
    "codec/std",
    "log/std",
    "pallet-mmr/std",
    "pallet-beefy/std",
    "pallet-beefy-mmr/std",
    "sp-mmr-primitives/std",
    "beefy-primitives/std",
    "beefy-merkle-tree/std",
    "frame-executive/std",
    "frame-support/std",
    "grandpa/std",
    "serde",
    "fp-self-contained/std",
    "fp-rpc/std",
    "serde-big-array",
    "sp-api/std",
    "libsecp256k1/std",
    "sp-block-builder/std",
    "sp-authority-discovery/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-inherents/std",
  	"evm/std",
    "evm/with-serde",
    "evm-runtime/std",
    "evm-gasometer/std",
    "rlp/std",
    "log/std",
	  "hex/std",
    "sha3/std",  
    "sp-runtime-interface/std",
    "sp-trie/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-tasks/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "frame-election-provider-support/std",
    "sp-transaction-pool/std",
    "sp-transaction-storage-proof/std",
    "sp-version/std",
    "fp-storage/std",
    "sp-npos-elections/std",
    "sp-finality-grandpa/std",
    "sp-state-machine/std",
    "sp-arithmetic/std",
    "sp-staking/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "timestamp/std",
    "transaction-payment/std",
    "scale-info/std",
    "hex/std",
    "pallet-session/std",
    "pallet-scheduler/std",
    "sp-authorship/std",
    "pallet-sudo/std",
    "sp-consensus-slots/std",
    "pallet-authorship/std",
    "ethereum/std",
    "ethereum-types/std",
    "serde/std",
    "ethabi/std",
    "ethbloom/std",
    "pallet-utility/std",
    "parity-util-mem",
    "pallet-membership/std",
    "pallet-collective/std",
    "pallet-offences/std",
    "pallet-authority-discovery/std",
    "pallet-im-online/std",
    "pallet-identity/std",
    "sp-application-crypto/std",
    "pallet-staking/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-treasury/std",
    "pallet-bounties/std",
    "pallet-tips/std",
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "evm/std",
    "evm/with-serde",
    "pallet-evm/std",
    "pallet-ethereum/std",
    "parity-bytes/std",
    "pallet-evm-precompile-storage-reader/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-ed25519/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-bn128/std",
    "pallet-evm-precompile-dispatch/std",
    "dock-poa/std",
    "dock-token-migration/std",
    "dock-core/std",
    "dock-price-feed/std",
    "pallet-base-fee/std",
    "dock-staking-rewards/std",
    "frame-benchmarking/std",
    "rustc-hex/std"
]
runtime-benchmarks = [
  "frame-benchmarking",
  "pallet-collective/runtime-benchmarks",
  "pallet-evm/runtime-benchmarks",
  "pallet-ethereum/runtime-benchmarks",
  "pallet-democracy/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-babe/runtime-benchmarks",
  "pallet-elections-phragmen/runtime-benchmarks",
  "pallet-election-provider-multi-phase/runtime-benchmarks",
  "grandpa/runtime-benchmarks",
  "pallet-im-online/runtime-benchmarks",

  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "balances/runtime-benchmarks",
  "frame-system-benchmarking",
  "dock-token-migration/runtime-benchmarks",
  "dock-core/runtime-benchmarks",
  "pallet-staking/runtime-benchmarks"
]

# For building testnet, affects spec name and ss58 prefix
testnet = []
# For building testnet, affects spec name and ss58 prefix
devnet = []
# For building mainnet, affects spec name and ss58 prefix
mainnet = []
# For building test nodes with small durations for staking, elections, voting, etc
small_durations = []
# Faster block production. Not recommended for production
fastblock = []
# Benchmarks-only
benchmarks-only = []

[dev-dependencies]
rand = "0.8.3"
hex = "0.4.2"