[package]
name = "dock-cheqd-migration"
version = "0.1.0"
authors = ["Dock.io"]
edition = "2021"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.bech32]
version = "0.11.0"
default-features = false
features = ["alloc"]

[dev-dependencies.pallet-balances]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.scale-info-derive]
git = "https://github.com/docknetwork/scale-info.git"
branch = "master"

[dependencies.scale-info]
version = "2.1.2"
default-features = false
features = ["derive"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.1.5"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.119"

[dependencies.frame-support]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-system]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-std]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-benchmarking]
optional = true
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-io]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-core]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-runtime]
default-features = false
#version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "bech32/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "sp-std/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
]
test = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
