[package]
name = "forked-pallet-democracy"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for democracy"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }
sp-io = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }
frame-benchmarking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0", optional = true }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }

[dev-dependencies]
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }
pallet-balances = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }
pallet-scheduler = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }
sp-storage = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }
substrate-test-utils = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0" }
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
