[package]
name = "forked-pallet-democracy"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for democracy"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.119", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-benchmarking = { version = "2.0.1", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-support = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[dev-dependencies]
sp-core = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-balances = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-scheduler = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-storage = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
substrate-test-utils = { version = "2.0.1" }
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
