[package]
name = "fiat_filter"
version = "0.0.1"
authors = ["Dock.io"]
edition = "2018"
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# # original
frame-support = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0', version = '2.0.0', default-features = false }
# frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0', version = '2.0.0' }
# # pallet-in-own-crate copy
codec = { package = 'parity-scale-codec', version="1.3.4", default-features = false, features = ['derive'] }
# ### serde = { version="1.0.101" }

# [dev-dependencies]
# sp-core = { default-features = false, version = '2.0.0' }
# sp-io = { default-features = false, version = '2.0.0' }
# sp-runtime = { default-features = false, version = '2.0.0' }


# DEFAULTS

# [dependencies.codec]
# default-features = false
# features = ['derive']
# package = 'parity-scale-codec'
# version = '1.3.4'

# [dependencies]
# frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]