[package]
name = "poa"
version = "0.6.2"
authors = ["Dock.io"]
edition = "2018"
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-support]
default-features = false
version = '3.0.0'

[dependencies.frame-system]
default-features = false
version = '3.0.0'

[dev-dependencies.sp-core]
default-features = false
version = '3.0.0'

[dependencies.sp-io]
default-features = false
version = '3.0.0'

[dependencies.sp-std]
default-features = false
version = '3.0.0'

[dependencies.pallet-session]
default_features = false
version = '3.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.110'

[dependencies.pallet-authorship]
default-features = false
version = '3.0.0'

[dependencies.sp-arithmetic]
default-features = false
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'

[dependencies.sp-api]
default-features = false
version = '3.0.0'

[dev-dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '3.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-api/std',
    'sp-io/std',
    'serde',
    'pallet-session/std',
    'pallet-authorship/std',
    'sp-arithmetic/std',
]

test = ['std', 'balances/std']
